syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

message SetContractNumberRequest {
	int32 SalesArrangementId = 1;

	int32 CustomerOnSaId = 2;
}

message SetContractNumberResponse {
	string ContractNumber = 1;
}